# python-scripts

./: LICENSE  README.md
api-data-fetcher/: README.md  fetcher.py
api-data-fetcher/data/: data.csv  data.json
api-data-fetcher/tests/: test_fetcher.py
file-cleaner-script/: README.md  pyproject.toml
file-cleaner-script/cleaner/: cleaner.py
file-cleaner-script/file_cleaner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
log-parser/: README.md  parser.py
log-parser/data/: result.json
log-parser/tests/: test_parser.py
server-health-checker/: README.md  pyproject.toml
server-health-checker/checker/: checker.py
server-health-checker/log/: health.log.1  health.log.2  health.log.3
server-health-checker/server_health_checker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
website-uptime-monitor/: README.md  monitor.py
website-uptime-monitor/data/: storage.csv  storage.json
website-uptime-monitor/src/: checker.py  storage.py
website-uptime-monitor/tests/: test_checker.py
website-uptime-monitor/utils/: main_logger.py
