[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="server_health_checker"
description="a simple cli to checking the server status"
version="0.1.0"
readme="README.md"
requires-python=">=3.8"
dependencies=[
  "requests>=2.28,<3.0",
  "click>=8.0,<9.0",
  "psutil>=6.0"
]

[project.optional-dependencies]
dev=[
    "ruff",
    "black"
]

[project.scripts]
srvcheck="checker.checker:main"

[tool.setuptools.packages.find]
include = ["checker"]